# sherpanote

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  README_zh.md  app.spec  build.py  debug_macos_models.py  dev.bat  dev.py  dev.sh  diagnose.py  main.py  pyproject.toml  runCC-DS.bat
.claude/SKILLS/: bug-fixer.md  doc-sync.md
.claude/feedback/: index.md
.claude/plans/: multi-source-model-download.md
.claude/rules/: coding-style.md  git-workflow.md  patterns.md  performance.md  security.md  testing.md
docs/: PRD-2.1.0.md  PRD.md  business_rules.md  changelog.md  dev_guide.md  license_report.md  review-2.1.0.md
docs/archived/: docs-README.md
docs/design/: state_machine.md  system_design.md
docs/procedures/: ai_text_processing.md  export_backup.md  file_video_transcription.md  model_installation.md  ocr_processing.md  record_versioning.md  recording_transcription.md  workflow_index.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  bridge.ts  env.d.ts  types.ts
py/: __init__.py  asr.py  asr_recognizer.py  backup.py  config.py  document_extractor.py  file_matcher.py  gpu_detect.py  io.py  llm.py  model_manager.py  model_registry.py  ocr.py  presets.py  processing_presets.py  storage.py  text_detector.py  video_downloader.py  whispercpp.py  whispercpp_registry.py
py/adapters/: __init__.py  docling_adapter.py  markitdown_adapter.py  opendata_adapter.py  ppocr_adapter.py
py/api/: __init__.py  ai.py  asr.py  base.py  config_backup.py  models.py  ocr_plugin.py  storage.py
py/outputs/: __init__.py  unified_document.py
py/plugins/: __init__.py  java_detect.py  manager.py  paths.py  runner.py
pywebvue/: __init__.py  app.py  bridge.py
pywebvue-docs/: README.md  SKILL.md  api.md  building.md  development.md  llms.txt
reference/: Changelog.md  DESIGN.md  Project.md  Reference-2.0.0.md  Reference.md  Release.md  daisy_llms.txt  feature-2026-04-19.md  issues-2.1.0.md  issues-2026-04-08.md  issues-2026-04-09-new_model.md  issues-2026-04-10.md  issues-2026-04-15.md  issues-2026-04-16.md  issues-2026-04-22.md  issues.md  preview-dark.html  preview.html
reference/archived-2026-04-07/: PLAN.md  Phase2_Plan.md  Phase3_Plan.md
reference/archived-2026-04-08/: PLAN-2.md
reference/cc-plan/: 2.1.0-phase1-effervescent-doodling-otter.md
scripts/: test_sherpa.py  usage.txt
(+63 files in other folders)
