[project]
name = "sherpanote"
version = "1.2.2"
description = "An intelligent voice learning assistant that combines real-time speech recognition with AI-powered text processing."
requires-python = ">=3.10"
dependencies = [
    "audioread>=3.0.0",
    "huggingface_hub>=0.20.0",
    "openai>=1.50.0",
    "python-docx>=1.1.0",
    "pywebview>=6.0",
    "sherpa-onnx>=1.10.0",
    "sherpa-onnx-bin>=1.12.35",
    "soundfile>=0.12.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywebvue"]
