[project]
name = "sherpanote"
version = "2.0.0"
description = "An intelligent voice learning assistant that combines real-time speech recognition with AI-powered text processing."
requires-python = ">=3.11"
dependencies = [
    "audioread>=3.0.0",
    "huggingface_hub>=0.20.0",
    "onnxruntime>=1.24.4",
    "openai>=1.50.0",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
    "pypdfium2>=4.30.0",
    "python-docx>=1.1.0",
    "pywebview>=6.0",
    "rapidocr>=3.8.1",
    "sherpa-onnx>=1.10.0",
    "sherpa-onnx-bin>=1.12.35",
    "soundfile>=0.12.0",
    "static-ffmpeg>=3.0",
    "yt-dlp>=2024.3.10",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywebvue"]
